// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingSpinner is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingSpinner testClass1 testClass2 css-8qqjsk-euiLoadingSpinner-m"
  data-test-subj="test subject string"
/>
`;

exports[`EuiLoadingSpinner size l is rendered 1`] = `
<span
  class="euiLoadingSpinner css-lh9wx8-euiLoadingSpinner-l"
/>
`;

exports[`EuiLoadingSpinner size m is rendered 1`] = `
<span
  class="euiLoadingSpinner css-8qqjsk-euiLoadingSpinner-m"
/>
`;

exports[`EuiLoadingSpinner size s is rendered 1`] = `
<span
  class="euiLoadingSpinner css-cavge3-euiLoadingSpinner-s"
/>
`;

exports[`EuiLoadingSpinner size xl is rendered 1`] = `
<span
  class="euiLoadingSpinner css-1ow0yso-euiLoadingSpinner-xl"
/>
`;

exports[`EuiLoadingSpinner size xxl is rendered 1`] = `
<span
  class="euiLoadingSpinner css-z6egi2-euiLoadingSpinner-xxl"
/>
`;
